# llamaindex-notes

./: .gitignore  README.md  _publish.yml  _quarto.yml  index.qmd  main.py  pyproject.toml
basic/: li-persist-openai.ipynb  li-quickstart-openai.ipynb
basic/storage/: default__vector_store.json  docstore.json  index_store.json
parse-pdf/: parse-pdf-basic.ipynb
parse-pdf/json/: 2009_RG_Bronchial Atresia.pdf.json
parse-pdf/md/: 2009_RG_Bronchial Atresia.pdf.md  Abn_LFT_LLM-w-pr.md  Abn_LFT_default.md
parse-pdf/md/th/: LLM_mahidol-research-camp-2024.jpg.md  LVM_GPT4o_mahidol-research-camp-2024.jpg.md
parse-pdf/pkl/: documents-basic.pkl
parse-pdf/prompt/: prompt.md
