[project]
name = "llamaindex-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "llama-cloud-services>=0.6.1",
    "llama-index-core>=0.12.19",
    "llama-index-readers-file>=0.4.5",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.0.1",
]
